# route-llm

./: Cargo.toml  PLAN-v2.1.md  PLAN-v2.2.md  PLAN-v2.md  PLAN-v3.md  PLAN.md  README.md  SPEC-v2.1.md  SPEC-v2.2.md  SPEC-v2.md  SPEC-v3.md  SPEC.md
crates/core/: Cargo.toml
crates/core/src/: difficulty.rs  lib.rs  model.rs  ranker.rs  registry.rs  router.rs
crates/core/src/budget/: dims.rs  escalation.rs  level.rs  mod.rs  weights.rs
crates/core/src/learned/: features.rs  mod.rs  model.rs  weights.rs
crates/core/tests/: heuristic_frozen.rs
crates/server/: Cargo.toml
crates/server/src/: dto.rs  error.rs  handlers.rs  lib.rs  main.rs
crates/server/tests/: anthropic.rs  budget.rs  consistency.rs  health.rs  learned.rs  models.rs  openai.rs  recommend.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: budget_label.rs  corpus.rs  dataset.rs  emit.rs  eval.rs  gold.rs  label.rs  logreg.rs  main.rs
data/: budget.claude.jsonl  budget.jsonl  corpus.jsonl  gold.jsonl  gold.unlabeled.jsonl  label_cache.jsonl  labeled.claude.jsonl  labeled.codex.jsonl  labeled.gemma.jsonl
prompts/: README.md  label.budget.prompt.md  label.prompt.md  synth.prompt.md
