[package]
name = "route-llm-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "route-llm"
path = "src/main.rs"

[dependencies]
route-llm-core = { path = "../core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
