[package]
name = "route-llm-trainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trainer"
path = "src/main.rs"

[dependencies]
route-llm-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
